--- a/views/gymsList.hbs
+++ b/views/gymsList.hbs
@@ -8,7 +8,7 @@
      </div> --}}
  </section>
 
-<h1> HIDDEN GYMS IN BARCELONA- </h1>
+<h1>HIDDEN<br>GYMS<br>IN<br>BARCELONA- </h1>
 
 <section class="gyms-list-gallery">
     {{#each gyms}}
